2005-11-28 David Brown <dmlb2000@gmail.com>
	* info/kernels/2.6.32: added
	* latest.defaults: updated 2.4 kernel

2005-11-28 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to grsecurity-2.1.7-2.6.14.3-200511261227.patch
	* info/patches/grsecurity_2_6/grsecurity-2.1.7-2.6.14.3-200511261227.patch: added

2005-11-26 David Brown <dmlb2000@gmail.com>
	* PRE_BUILD: make sure the source directory doesn't have group and other
	  write permissions (chmod og-w -R $LINUX_SOURCE_DIRECTORY)

2005-11-25 David Brown <dmlb2000@gmail.com>
	* FINAL: removed the notice about the linux kernel name change
	* PREPARE: did some 'refactoring' of the source_patch and source_info
	  functions
	  added some info if the old source tree is going to update
	  removed the source info from the expert mode so it won't download 
	  anything
	  added the xen and um arches to the arch menu
	  removed old commented code from the creation of expert mode
	* PRE_BUILD: fixed the propogation of the error when gpg checking fails
	  and made sure it returns an error when unpacking fails

2005-11-25 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.14-cks6
	* info/patches/ck_server_patches/patch-2.6.14-cks6: added

2005-11-25 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.14-ck6
	* info/patches/ck_patches/patch-2.6.14-ck6: added

2005-11-25 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.15-rc2-mm1
	* info/patches/mm_patches/2.6.15-rc2-mm1: added

2005-11-25 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.14.3
	* info/patches/maintenance_patches/patch-2.6.14.3: added

2005-11-20 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to grsecurity-2.1.7-2.6.14.2-200511150641.patch
	* info/patches/grsecurity_2_6/grsecurity-2.1.7-2.6.14.2-200511150641.patch: added

2005-11-20 David Brown <dmlb2000@gmail.com>