@@ -1,4 +1,8 @@
 2005-11-28 David Brown <dmlb2000@gmail.com>
+	* latest.defaults: updated latest to grsecurity-2.1.7-2.4.32-200511131857.patch
+	* info/patches/grsecurity_2_4/grsecurity-2.1.7-2.4.32-200511131857.patch: added
+
+2005-11-28 David Brown <dmlb2000@gmail.com>
 	* info/kernels/2.6.32: added
 	* latest.defaults: updated 2.4 kernel
 
